--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASW</title>
+    <title>ASW Afrique</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="home.css">
     <link rel="shortcut icon" href="assets/atalian-logo.png">
@@ -24,7 +24,7 @@
     <div class="acceuil"></div>
         <h2>Le mot du président</h2>
         <div class="halim">
-        <img src="assets/direction/Giga_Chad.jpg" alt="Abdelhalim FARAJALLAH"><br>
+        <img src="assets/direction/halim.jpg" style="height: 400px;" alt="Abdelhalim FARAJALLAH"><br>
         </div>    
             <p class="le-mot-du-president">
                 "enfaite le feur c'est qu'une question de point de vue, et le point de
@@ -40,12 +40,12 @@
         </div>
     </div>
     <div class="barre-de-contact">
-        <ul class="BC1">
+        <ul class="CB1">
             <li><a href="contact.html">contact</a></li>
             <li><a href="about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
-        <ul class="BC2">
+        <ul class="CB2">
             <li>contact</li>
             <li>à propos de nous</li>
             <li>carrière</li>
