[UPGRADE] about page started. reproducing the Atalian.com page with no style.

--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW, à propos de nous</title>
     <link rel="shortcut icon" href="assets/atalian-logo.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <div class="header">
@@ -20,7 +21,70 @@
         </ul>
     </nav>
     <div class="about">
-        <h2>À propos</h2>
-        <p>Lorem ipsum dolor sit amet consecte </p>
+        <img src="assets/historique/meeting.jpg" alt="métiers atalian">
+        <div class="title1">
+        <h2>ASW, Acteur majeur du facility management</h2>
+        <p>
+            <img src="assets/historique/lavage vitre.png" alt="laveur carreaux façade">
+            A Simple Way est l’un des leaders mondiaux du Facility Management. <br>
+            Implanté dans 20 pays sur 4 continents, ATALIAN accompagne les entreprises et les
+            organisations dans l’externalisation des services aux bâtiments et aux occupants
+            en apportant des solutions personnalisées créatrices de valeur. <br>
+            A Simple Way intervient dans les secteurs d’activités et les environnements les
+            plus divers avec une offre globale et intégrée de prestations conformes aux exigences
+            les plus élevées. <br>
+        </p>
+        </div>
+        <div class="title2">
+            <h2>Une offre large et integrée de services</h2>
+            <ul class="logo_services">
+                <li><img src="assets/services/goutte.png" alt="propreté & serices associés"></li>
+                <li><img src="assets/services/rouage.png" alt="maintenance et energie"></li>
+                <li><img src="assets/services/shield.png" alt="sécurité, surveillance et sureté"></li>
+                <li><img src="assets/services/récéption.png" alt="accueil et services associés"></li>
+                <li><img src="assets/services/couvert.png" alt="restauration"></li>
+            </ul>
+            <ul>
+                <li>Propreté & services associés</li>
+                <li>Maintenace et Energy</li>
+                <li>Sécurité, Surveillance, Sureté</li>
+                <li>Accueil et services associés</li>
+                <li>Restauration</li>
+            </ul>
+        </div>
+        <div class="title3">
+            <h2>ENVIRONNEMENTS ET SECTEURS D’INTERVENTION</h2>
+            <ul class="logo_environnement">
+                <li><img src="assets/environnements/buildings.png" alt="tertiaire & sièges sociaux"></li>
+                <li><img src="assets/environnements/shopping.png" alt="espaces de vente & services"></li>
+                <li><img src="assets/environnements/logistic.png" alt="transport & logistique"></li>
+                <li><img src="assets/environnements/usine.png" alt="industrie"></li>
+                <li><img src="assets/environnements/agro.png" alt="agroalimentaire"></li>
+                <li><img src="assets/environnements/hosto.png" alt="établissement de santé"></li>
+            </ul>
+            <ul>
+                <li>Tertiaire & Sièges sociaux</li>
+                <li>Espaces de vente & Services</li>
+                <li>Transport & Logistique</li>
+                <li>Industrie</li>
+                <li>Agroalimentaire</li>
+                <li>Etablissement de santé</li>
+            </ul>
+        </div>
+        <div class="title4">
+            <h2>des solutions personnalisées</h2>
+            <p>
+                Avec sa large palette de savoir-faire métier et d’expertises
+                sectorielles, ATALIAN peut prendre en charge tout ou partie
+                des services que vous souhaitez externaliser. Ses équipes peuvent
+                délivrer des prestations mono-services, multiservices ou full-service
+                (FM intégré) en fonction de vos besoins, de votre organisation et de vos budgets. <br>
+                ATALIAN effectue en propre plus de 85 % des prestations qui lui sont confiées
+                et pilote les autres prestations en déléguant leur exécution à des partenaires
+                de confiance sélectionnés pour leur qualité de service irréprochable. <br>
+                <img src="assets/travail.png" alt="travail bureau">
+            </p>
+        </div>
+    </div>
 </body>
 </html>
