[ADD] Our engagements page created with all feature and no design. Access to the "our engagement page" added to the main page. contact bar added to the "about" page.

--- a/about.html
+++ b/about.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW, à propos de nous</title>
     <link rel="shortcut icon" href="assets/atalian-logo.png">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
+        <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo atalian">
         <h1><a href="index.html" class="home">A Simple Way</a></h1>
     </div>
     <nav class="navbar">
@@ -85,6 +86,32 @@
                 <img src="assets/travail.png" alt="travail bureau">
             </p>
         </div>
+        <div class="our_mission">
+            <h2>Notre mission</h2>
+            <p>
+                <img src="assets/hotelerie.png" alt="room service">
+                Nous intervenons dans des dizaines de milliers d’espaces de travail,
+                de vie et de loisirs. Nous les entretenons, les sécurisons, les rendons
+                plus sains, plus chaleureux et plus fonctionnels pour qu’ils offrent une
+                expérience unique à leurs occupants et leurs utilisateurs et pour en faire
+                des actifs de valeur. <br>
+                Permettre aux organisations de se concentrer sur leur cœur d’activités et
+                d’améliorer leurs performances en prenant soin des personnes et de leur
+                environnement est notre raison d’être <br>
+            </p>
+        </div>
+    </div>
+    <div class="barre-de-contact">
+        <ul class="CB1">
+            <li><a href="contact.html">contact</a></li>
+            <li><a href="about.html">à propos de nous</a></li>
+            <li>carrière</li>
+        </ul>
+        <ul class="CB2">
+            <li>contact</li>
+            <li>à propos de nous</li>
+            <li>carrière</li>
+        </ul>
     </div>
 </body>
 </html>
