--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="navbar"><a href="index.html">Accueil</a></li>
             <li class="navbar"><a href="about.html">À propos</a></li>
             <li class="navbar"><a href="#">Services</a></li>
+            <li class="navbar"><a href="engagement.html">Engagements</a></li>
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
