[ADD] badges for the engagement page

--- a/engagement.html
+++ b/engagement.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW, engagements</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="engagement.css">
     <link rel="shortcut icon" href="assets/atalian-logo.png">
+</head>
+<body>
     <div class="header">
         <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo atalian">
         <h1><a href="index.html" class="home">A Simple Way</a></h1>
@@ -19,7 +22,7 @@
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <img src="assets/Nos-engagements.jpg" alt="handshake">
+    <img class="handshake" src="assets/Nos-engagements.jpg" alt="handshake">
     <div class="Nos-engagements">
         <h2>Nos engagements</h2>
         <p>
@@ -28,16 +31,16 @@
             Nos stratégies et nos actions se fondent sur 4 engagements essentiels.
         </p>
         <ul class="nos-engagement">
-            <li><img src="" alt="badge-1"></li>
+            <li><img src="assets/badges/1.png" alt="badge-1"></li>
             <li><h3>Optimser le fonctionnement des batiments et des equipements</h3></li>
             <li>Sécurité & sûreté, performances techniques et énergétiques, maîtrise des enjeux environnementaux, économies budgétaires</li>
-            <li><img src="" alt="badge-2"></li>
+            <li><img src="assets/badges/2.png" alt="badge-2"></li>
             <li><h3>AMÉLIORER LE BIEN-ÊTRE DES OCCUPANTS ET DES USAGERS</h3></li>
             <li>Accueil, santé & sécurité, confort et qualité de vie au travail, expérience usager.</li>
-            <li><img src="" alt="badge-3"></li>
+            <li><img src="assets/badges/3.png" alt="badge-3"></li>
             <li><h3>IMAGINER DES SERVICES RESPONSABLES</h3></li>
             <li>Réduction des émissions de GES, des consommations d’eau & d’énergies, limitation, traitement et recyclage des déchets.</li>
-            <li><img src="" alt="badge-4"></li>
+            <li><img src="assets/badges/4.png" alt="badge-4"></li>
             <li><h3>AMÉLIORER LA QUALITÉ DE VIE DE NOS COLLABORATEURS</h3></li>
             <li>Emploi durable, égalité professionnelle, santé & sécurité, développement professionnel, qualité de vie au travail.</li>
         </ul>
