--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <div class="acceuil"></div>
+    <div class="acceuil">
         <h2>Le mot du président</h2>
         <div class="halim">
         <img src="assets/direction/halim.jpg" style="height: 400px;" alt="Abdelhalim FARAJALLAH"><br>
@@ -31,6 +31,7 @@
                 "enfaite le feur c'est qu'une question de point de vue, et le point de
                  vue c'est comme le trou du cul, tout le monde en a un."
             </p>
+    </div>
     <div class="all">
         <div id="home">
             <div class="img_scroll">
