--- a/engagement.html
+++ b/engagement.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW, engagements</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="engagement.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/engagement.css">
     <link rel="shortcut icon" href="assets/atalian-logo.png">
 </head>
 <body>
