[ADD-UPDATE] key numbers pages added, styled and connected. every navbar updated and synchronised. many stylesheets updated

--- a/engagement.html
+++ b/engagement.html
@@ -17,6 +17,7 @@
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Accueil</a></li>
             <li class="navbar"><a href="about.html">À propos</a></li>
+            <li class="navbar"><a href="key_numbers.html">Chiffres clés</a></li>
             <li class="navbar"><a href="#">Services</a></li>
             <li class="navbar"><a href="engagement.html">Engagements</a></li>
             <li class="navbar"><a href="#">Contact</a></li>
