--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Accueil</a></li>
             <li class="navbar"><a href="about.html">À propos</a></li>
+            <li class="navbar"><a href="key_numbers.html">Chiffres clés</a></li>
             <li class="navbar"><a href="#">Services</a></li>
+            <li class="navbar"><a href="engagement.html">Engagements</a></li>
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
