[ADD-MODI] Our values page created, styled and connected. Nav-bar upgraded with a drop-down bar Nav-bar fixed on the page Every page adaptated to the nav-bar

--- a/about.html
+++ b/about.html
@@ -7,8 +7,6 @@
     <link rel="shortcut icon" href="assets/atalian-logo.png">
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
     <div class="header">
         <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo atalian">
         <h1><a href="index.html" class="home">A Simple Way</a></h1>
@@ -16,16 +14,23 @@
     <nav class="navbar">
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Accueil</a></li>
-            <li class="navbar"><a href="about.html">À propos</a></li>
-            <li class="navbar"><a href="key_numbers.html">Chiffres clés</a></li>
+            <li class="navbar"><a href="#">À propos</a>
+                <ul class="about">
+                    <li><a href="about.html">Présentation</a></li>
+                    <li><a href="engagement.html">Nos engagements</a></li>
+                    <li><a href="values.html">Nos valeurs</a></li>
+                    <li><a href="key_numbers.html">Chiffres clés</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                </ul>
+            </li>
             <li class="navbar"><a href="#">Services</a></li>
-            <li class="navbar"><a href="engagement.html">Engagements</a></li>
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <div class="about">
-        <img src="assets/historique/meeting.jpg" alt="métiers atalian">
-        <div class="title1">
+</head>
+<body>
+    <img class="laught" src="assets/historique/meeting.jpg" alt="métiers atalian">
+    <div class="title1">
         <h2>ASW, Acteur majeur du facility management</h2>
         <p>
             <img src="assets/historique/lavage vitre.png" alt="laveur carreaux façade">
@@ -33,75 +38,83 @@
             Implanté dans 20 pays sur 4 continents, ATALIAN accompagne les entreprises et les
             organisations dans l’externalisation des services aux bâtiments et aux occupants
             en apportant des solutions personnalisées créatrices de valeur. <br>
-            A Simple Way intervient dans les secteurs d’activités et les environnements les
+            <br>A Simple Way intervient dans les secteurs d’activités et les environnements les
             plus divers avec une offre globale et intégrée de prestations conformes aux exigences
             les plus élevées. <br>
         </p>
-        </div>
+    </div>
+    <div class="list">
         <div class="title2">
             <h2>Une offre large et integrée de services</h2>
             <ul class="logo_services">
-                <li><img src="assets/services/goutte.png" alt="propreté & serices associés"></li>
-                <li><img src="assets/services/rouage.png" alt="maintenance et energie"></li>
-                <li><img src="assets/services/shield.png" alt="sécurité, surveillance et sureté"></li>
-                <li><img src="assets/services/récéption.png" alt="accueil et services associés"></li>
-                <li><img src="assets/services/couvert.png" alt="restauration"></li>
-            </ul>
-            <ul>
-                <li>Propreté & services associés</li>
-                <li>Maintenace et Energy</li>
-                <li>Sécurité, Surveillance, Sureté</li>
-                <li>Accueil et services associés</li>
-                <li>Restauration</li>
+                <li><img src="assets/services/goutte.png" alt="propreté & serices associés">
+                    <h4>Propreté & services associés</h4>
+                </li>
+                <li><img src="assets/services/rouage.png" alt="maintenance et energie">
+                    <h4>Maintenace et Energy</h4>
+                </li>
+                <li><img src="assets/services/shield.png" alt="sécurité, surveillance et sureté">
+                    <h4>Sécurité, Surveillance, Sureté</h4>
+                </li>
+                <li><img src="assets/services/récéption.png" alt="accueil et services associés">
+                    <h4>Accueil et services associés</h4>.
+                </li>
+                <li><img src="assets/services/couvert.png" alt="restauration">
+                    <h4>Restauration</h4>
+                </li>
             </ul>
         </div>
         <div class="title3">
             <h2>ENVIRONNEMENTS ET SECTEURS D’INTERVENTION</h2>
             <ul class="logo_environnement">
-                <li><img src="assets/environnements/buildings.png" alt="tertiaire & sièges sociaux"></li>
-                <li><img src="assets/environnements/shopping.png" alt="espaces de vente & services"></li>
-                <li><img src="assets/environnements/logistic.png" alt="transport & logistique"></li>
-                <li><img src="assets/environnements/usine.png" alt="industrie"></li>
-                <li><img src="assets/environnements/agro.png" alt="agroalimentaire"></li>
-                <li><img src="assets/environnements/hosto.png" alt="établissement de santé"></li>
+                <li><img src="assets/environnements/buildings.png" alt="tertiaire & sièges sociaux">
+                    <h4>Tertiaire & Sièges sociaux</h4>
+                </li>
+                <li><img src="assets/environnements/shopping.png" alt="espaces de vente & services">
+                    <h4>Espaces de vente & Services</h4>
+                </li>
+                <li><img src="assets/environnements/logistic.png" alt="transport & logistique">
+                    <h4>Transport & Logistique</h4>
+                </li>
+                <li><img src="assets/environnements/usine.png" alt="industrie">
+                    <h4>Industrie</h4>
+                </li>
+                <li><img src="assets/environnements/agro.png" alt="agroalimentaire">
+                    <h4>Agroalimentaire</h4>
+                </li>
+                <li><img src="assets/environnements/hosto.png" alt="établissement de santé">
+                    <h4>Etablissement de santé</h4>
+                </li>
             </ul>
-            <ul>
-                <li>Tertiaire & Sièges sociaux</li>
-                <li>Espaces de vente & Services</li>
-                <li>Transport & Logistique</li>
-                <li>Industrie</li>
-                <li>Agroalimentaire</li>
-                <li>Etablissement de santé</li>
-            </ul>
         </div>
-        <div class="title4">
-            <h2>des solutions personnalisées</h2>
-            <p>
-                Avec sa large palette de savoir-faire métier et d’expertises
-                sectorielles, ATALIAN peut prendre en charge tout ou partie
-                des services que vous souhaitez externaliser. Ses équipes peuvent
-                délivrer des prestations mono-services, multiservices ou full-service
-                (FM intégré) en fonction de vos besoins, de votre organisation et de vos budgets. <br>
-                ATALIAN effectue en propre plus de 85 % des prestations qui lui sont confiées
-                et pilote les autres prestations en déléguant leur exécution à des partenaires
-                de confiance sélectionnés pour leur qualité de service irréprochable. <br>
-                <img src="assets/travail.png" alt="travail bureau">
-            </p>
-        </div>
-        <div class="our_mission">
-            <h2>Notre mission</h2>
-            <p>
-                <img src="assets/hotelerie.png" alt="room service">
-                Nous intervenons dans des dizaines de milliers d’espaces de travail,
-                de vie et de loisirs. Nous les entretenons, les sécurisons, les rendons
-                plus sains, plus chaleureux et plus fonctionnels pour qu’ils offrent une
-                expérience unique à leurs occupants et leurs utilisateurs et pour en faire
-                des actifs de valeur. <br>
-                Permettre aux organisations de se concentrer sur leur cœur d’activités et
-                d’améliorer leurs performances en prenant soin des personnes et de leur
-                environnement est notre raison d’être <br>
-            </p>
-        </div>
+    </div>
+    <div class="title4">
+        <h2>des solutions personnalisées</h2>
+        <p>
+            Avec sa large palette de savoir-faire métier et d’expertises
+            sectorielles, ATALIAN peut prendre en charge tout ou partie
+            des services que vous souhaitez externaliser. Ses équipes peuvent
+            délivrer des prestations mono-services, multiservices ou full-service
+            (FM intégré) en fonction de vos besoins, de votre organisation et de vos budgets. <br><br>
+            ATALIAN effectue en propre plus de 85 % des prestations qui lui sont confiées
+            et pilote les autres prestations en déléguant leur exécution à des partenaires
+            de confiance sélectionnés pour leur qualité de service irréprochable. <br>
+            <img src="assets/travail.png" alt="travail bureau">
+        </p>
+    </div>
+    <div class="our_mission">
+        <h2>Notre mission</h2>
+        <p>
+            <img src="assets/hotelerie.png" alt="room service">
+            Nous intervenons dans des dizaines de milliers d’espaces de travail,
+            de vie et de loisirs. Nous les entretenons, les sécurisons, les rendons
+            plus sains, plus chaleureux et plus fonctionnels pour qu’ils offrent une
+            expérience unique à leurs occupants et leurs utilisateurs et pour en faire
+            des actifs de valeur. <br><br>
+            Permettre aux organisations de se concentrer sur leur cœur d’activités et
+            d’améliorer leurs performances en prenant soin des personnes et de leur
+            environnement est notre raison d’être <br>
+        </p>
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
