--- a/engagement.html
+++ b/engagement.html
@@ -16,34 +16,52 @@
     <nav class="navbar">
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Accueil</a></li>
-            <li class="navbar"><a href="about.html">À propos</a></li>
-            <li class="navbar"><a href="key_numbers.html">Chiffres clés</a></li>
+            <li class="navbar"><a href="#">À propos</a>
+                <ul class="about">
+                    <li><a href="about.html">Présentation</a></li>
+                    <li><a href="engagement.html">Nos engagements</a></li>
+                    <li><a href="values.html">Nos valeurs</a></li>
+                    <li><a href="key_numbers.html">Chiffres clés</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                </ul>
+            </li>
             <li class="navbar"><a href="#">Services</a></li>
-            <li class="navbar"><a href="engagement.html">Engagements</a></li>
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
     <img class="handshake" src="assets/Nos-engagements.jpg" alt="handshake">
     <div class="Nos-engagements">
         <h2>Nos engagements</h2>
-        <p>
+        <p class="first-paragraph">
             Nous prenons soin des personnes et de leur environnement
             pour que les organisations et la Société fonctionnent mieux.
             Nos stratégies et nos actions se fondent sur 4 engagements essentiels.
         </p>
         <ul class="nos-engagement">
-            <li><img src="assets/badges/1.png" alt="badge-1"></li>
-            <li><h3>Optimser le fonctionnement des batiments et des equipements</h3></li>
-            <li>Sécurité & sûreté, performances techniques et énergétiques, maîtrise des enjeux environnementaux, économies budgétaires</li>
-            <li><img src="assets/badges/2.png" alt="badge-2"></li>
-            <li><h3>AMÉLIORER LE BIEN-ÊTRE DES OCCUPANTS ET DES USAGERS</h3></li>
-            <li>Accueil, santé & sécurité, confort et qualité de vie au travail, expérience usager.</li>
-            <li><img src="assets/badges/3.png" alt="badge-3"></li>
-            <li><h3>IMAGINER DES SERVICES RESPONSABLES</h3></li>
-            <li>Réduction des émissions de GES, des consommations d’eau & d’énergies, limitation, traitement et recyclage des déchets.</li>
-            <li><img src="assets/badges/4.png" alt="badge-4"></li>
-            <li><h3>AMÉLIORER LA QUALITÉ DE VIE DE NOS COLLABORATEURS</h3></li>
-            <li>Emploi durable, égalité professionnelle, santé & sécurité, développement professionnel, qualité de vie au travail.</li>
+            <li><img src="assets/badges/1.png" alt="badge-1">
+                <div class="wraper">
+                    <h3>Optimser le fonctionnement des batiments et des equipements</h3>
+                    <p>Sécurité & sûreté, performances techniques et énergétiques, maîtrise des enjeux environnementaux, économies budgétaires</p>
+                </div>
+            </li>
+            <li><img src="assets/badges/2.png" alt="badge-2">
+                <div class="wraper">
+                    <h3>AMÉLIORER LE BIEN-ÊTRE DES OCCUPANTS ET DES USAGERS</h3>
+                    <p>Accueil, santé & sécurité, confort et qualité de vie au travail, expérience usager.</p>
+                </div>
+            </li>
+            <li><img src="assets/badges/3.png" alt="badge-3">
+                <div class="wraper">
+                    <h3>IMAGINER DES SERVICES RESPONSABLES</h3>
+                    <p>Réduction des émissions de GES, des consommations d’eau & d’énergies, limitation, traitement et recyclage des déchets.</p>
+            
+                </li>
+            <li><img src="assets/badges/4.png" alt="badge-4">
+                <div class="wraper">
+                    <h3>AMÉLIORER LA QUALITÉ DE VIE DE NOS COLLABORATEURS</h3>
+                    <p>Emploi durable, égalité professionnelle, santé & sécurité, développement professionnel, qualité de vie au travail.</p>
+                </div>
+            </li>
         </ul>
     </div>
     <div class="barre-de-contact">
