--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/home.css">
     <link rel="shortcut icon" href="assets/atalian-logo.png">
-</head>
-<body>
     <div class="header">
         <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo atalian">
         <h1><a href="index.html" class="home">A Simple Way</a></h1>
@@ -16,17 +14,25 @@
     <nav class="navbar">
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Accueil</a></li>
-            <li class="navbar"><a href="about.html">À propos</a></li>
-            <li class="navbar"><a href="key_numbers.html">Chiffres clés</a></li>
+            <li class="navbar"><a href="#">À propos</a>
+                <ul class="about">
+                    <li><a href="about.html">Présentation</a></li>
+                    <li><a href="engagement.html">Nos engagements</a></li>
+                    <li><a href="values.html">Nos valeurs</a></li>
+                    <li><a href="key_numbers.html">Chiffres clés</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                </ul>
+            </li>
             <li class="navbar"><a href="#">Services</a></li>
-            <li class="navbar"><a href="engagement.html">Engagements</a></li>
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
+</head>
+<body>
     <div class="acceuil">
         <h2>Le mot du président</h2>
         <div class="halim">
-        <img src="assets/direction/halim.jpg" style="height: 400px;" alt="Abdelhalim FARAJALLAH"><br>
+            <img src="assets/direction/halim.jpg" style="height: 400px;" alt="Abdelhalim FARAJALLAH"><br>
         </div>    
             <p class="le-mot-du-president">
                 "enfaite le feur c'est qu'une question de point de vue, et le point de
