--- a/key_numbers.html
+++ b/key_numbers.html
@@ -16,10 +16,16 @@
     <nav class="navbar">
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Accueil</a></li>
-            <li class="navbar"><a href="about.html">À propos</a></li>
-            <li class="navbar"><a href="key_numbers.html">Chiffres clés</a></li>
+            <li class="navbar"><a href="#">À propos</a>
+                <ul class="about">
+                    <li><a href="about.html">Présentation</a></li>
+                    <li><a href="engagement.html">Nos engagements</a></li>
+                    <li><a href="values.html">Nos valeurs</a></li>
+                    <li><a href="key_numbers.html">Chiffres clés</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                </ul>
+            </li>
             <li class="navbar"><a href="#">Services</a></li>
-            <li class="navbar"><a href="engagement.html">Engagements</a></li>
             <li class="navbar"><a href="#">Contact</a></li>
         </ul>
     </nav>
