[ADD] innivation page started but not complete and not styled

--- a/innovation.html
+++ b/innovation.html
@@ -30,6 +30,65 @@
     </nav>
 </head>
 <body>
-    
+    <img class="touch-hologram" src="" alt="touching hologram">
+    <div class="1st-title">
+        <h2>Une stratégie d'innovation au service de nos clients</h2>
+    </div>
+    <p class="1st-paragraph">
+        L’offre ATALIAN bénéficie d’une démarche d’innovation très pragmatique.
+        Le Groupe s’intéresse à des innovations existantes ou en cours de développement,
+        en vue de déploiements rapides. Chaque innovation étudiée doit avoir une
+        application concrète et pouvoir s’intégrer dans une offre commercialisable.
+        Les innovations susceptibles de répondre à un besoin identifié sont testées
+        en partenariat avec des clients pilotes (proof of concept). En fonction des
+        résultats observés, elles peuvent être ensuite déployées
+    </p>
+    <div class="2nd-title">
+        <h2>l'écosystème innovatipn ASW</h2>
+        <img src="" alt="atalian's ecosytem">
+    </div>
+    <div class="3rd-title">
+        <h2>retour sur nos succés</h2>
+        <ul class="retour-sur-nos-succès">
+            <li>
+                <div class="element">
+                    <h3>robotisation</h3>
+                    Robot laveur <br>
+                    RETAIL <br>
+                    <img src="" alt="washing robot">
+                    Intégration dans l’organisation de nos équipes opérationnelles :
+                    autonomie, qualité de nettoyage, traçabilité sur cartographie.
+                </div>
+            </li>
+            <li>
+                <div class="element">
+                    <h3>Formation</h3>
+                    Foramtion en réalité virtuelle <br>
+                    INDUSTRIE <br>
+                    <img src="" alt="VR">
+                    Meilleure appréhension du contexte client et des méthodes à déployer.
+                </div>
+            </li>
+            <li>
+                <div class="element">
+                    <h3>Audit de nettoyabilité</h3>
+                    Détection des risques <br>
+                    Agroalimentaire <br>
+                    <img src="" alt="neon">
+                    Détermination des zones critiques d’accumulation
+                </div>
+            </li>
+            <li>
+                <div class="element">
+                    <h3>désinfection</h3>
+                    Revêtements Actifs <br>
+                    transport <br>
+                    <img src="" alt="bus washing">
+                    Maintien d’une surface hygiénique pendant 30J
+                </div>
+            </li>
+        </ul>
+    </div>
+
 </body>
 </html>
