[ADD-UPGD-ORG] Innovation page finished (completed, styled and linked) Repositorie rearrenged for more explicit folder. nav-bar fully filed

--- a/innovation.html
+++ b/innovation.html
@@ -30,11 +30,11 @@
     </nav>
 </head>
 <body>
-    <img class="touch-hologram" src="" alt="touching hologram">
-    <div class="1st-title">
+    <img class="touch-hologram" src="assets/pages/innovation/Innovation.jpg" alt="touching hologram">
+    <div class="first-title">
         <h2>Une stratégie d'innovation au service de nos clients</h2>
     </div>
-    <p class="1st-paragraph">
+    <p class="strategie-innovation">
         L’offre ATALIAN bénéficie d’une démarche d’innovation très pragmatique.
         Le Groupe s’intéresse à des innovations existantes ou en cours de développement,
         en vue de déploiements rapides. Chaque innovation étudiée doit avoir une
@@ -43,52 +43,72 @@
         en partenariat avec des clients pilotes (proof of concept). En fonction des
         résultats observés, elles peuvent être ensuite déployées
     </p>
-    <div class="2nd-title">
-        <h2>l'écosystème innovatipn ASW</h2>
-        <img src="" alt="atalian's ecosytem">
+    <div class="ecosystem-atalian">
+        <h2>l'écosystème innovation ASW</h2>
+        <img src="assets/pages/innovation/ecosystem.png" alt="atalian's ecosytem">
     </div>
-    <div class="3rd-title">
+    <div class="retour-sur-nos-succes">
         <h2>retour sur nos succés</h2>
-        <ul class="retour-sur-nos-succès">
-            <li>
-                <div class="element">
-                    <h3>robotisation</h3>
-                    Robot laveur <br>
-                    RETAIL <br>
-                    <img src="" alt="washing robot">
-                    Intégration dans l’organisation de nos équipes opérationnelles :
-                    autonomie, qualité de nettoyage, traçabilité sur cartographie.
-                </div>
+        <ul class="retour-sur-nos-succes">
+            <li class="element">
+                <h3>robotisation</h3>
+                <p>Robot laveur</p> <br>
+                <div class="categorie">RETAIL</div> <br>
+                <img src="assets/pages/innovation/robot-laveur.jpg" alt="washing robot">
+                <p>Intégration dans l’organisation de nos équipes opérationnelles :
+                autonomie, qualité de nettoyage, traçabilité sur cartographie.
+                </p>
             </li>
-            <li>
-                <div class="element">
-                    <h3>Formation</h3>
-                    Foramtion en réalité virtuelle <br>
-                    INDUSTRIE <br>
-                    <img src="" alt="VR">
-                    Meilleure appréhension du contexte client et des méthodes à déployer.
-                </div>
+            <li class="element">
+                <h3>Formation</h3>
+                <p class="sous-titre">Foramtion en réalité virtuelle</p> <br>
+                <div class="categorie">INDUSTRIE</div><br>
+                <img src="assets/pages/innovation/VR.jpg" alt="VR">
+                <p>Meilleure appréhension du contexte client et des méthodes à déployer.</p>
             </li>
-            <li>
-                <div class="element">
-                    <h3>Audit de nettoyabilité</h3>
-                    Détection des risques <br>
-                    Agroalimentaire <br>
-                    <img src="" alt="neon">
-                    Détermination des zones critiques d’accumulation
-                </div>
+            <li class="element">
+                <h3>Audit de nettoyabilité</h3>
+                <p>Détection des risques</p> <br>
+                <div class="categorie">Agroalimentaire </div> <br>
+                <img src="assets/pages/innovation/neon.jpg" alt="neon">
+                <p>Détermination des zones critiques d’accumulation</p>
             </li>
-            <li>
-                <div class="element">
-                    <h3>désinfection</h3>
-                    Revêtements Actifs <br>
-                    transport <br>
-                    <img src="" alt="bus washing">
-                    Maintien d’une surface hygiénique pendant 30J
-                </div>
+            <li class="element">
+                <h3>désinfection</h3>
+                <p>Revêtements Actifs</p> <br>
+                <div class="categorie">transport</div><br>
+                <img src="assets/pages/innovation/Bus.jpg" alt="bus washing">
+                <p>Maintien d’une surface hygiénique pendant 30J</p>
             </li>
         </ul>
     </div>
-
+    <div class="perspective-2023">
+        <h2>Perspective 2023</h2>
+        <ul class="perspective-2023">
+            <li class="element">
+                <h3>Piège connecté</h3>
+                <img src="assets/pages/innovation/trap.jpg" alt="connected trap">
+                <p>Se déplacer au bon endroit au bon moment,
+                identifier les zones d’infestation</p>
+            </li>
+            <li class="element">
+                <h3>Formation en réalité mixte</h3>
+                <img src="assets/pages/innovation/VR-helmet.jpg" alt="mixed reality">
+                <p>Se former dans la réalité du client, mieux
+                appréhender les gestes à faire, les risques en suivant un parcours interactif</p>
+            </li>
+            <li class="element">
+                <h3>SAV à distance</h3>
+                <img src="assets/pages/innovation/SAV.jpg" alt="remote maintenance">
+                <p>Dépanner en moins d’une heure avec l’aide d’un expert et se former aux équipements
+                complexes de façon autonome.</p>
+            </li>
+            <li class="element">
+                <h3>exosquelette</h3>
+                <img src="assets/pages/innovation/exo-squeleton.jpg" alt="exoskeleton">
+                <p>Limiter la pénibilité du travail de manutention</p>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
