--- a/values.html
+++ b/values.html
@@ -29,7 +29,7 @@
     </nav>
 </head>
 <body>
-    <img class="ofa" src="assets/values/Vos-valeurs.jpg" alt="one for all, all for one">
+    <img class="ofa" src="assets/pages/values/Vos-valeurs.jpg" alt="one for all, all for one">
     <div class="nos-valeur">
         <h2>Nos valeurs</h2>
         <p class="first_paragraph">
@@ -40,7 +40,7 @@
             économique, financier, social, sociétal, environnemental.
         </p>
         <ul class="nos_valeur">
-            <li><img src="assets/values/mindset.png" alt="initiative">
+            <li><img src="assets/pages/values/mindset.png" alt="initiative">
                 <div class="initiative">
                 <h3>initiative & résponsabilité</h3>
                 <p>
@@ -52,7 +52,7 @@
                 </p>
                 </div>
             </li>
-            <li><img src="assets/values/chrono.png" alt="ambition">
+            <li><img src="assets/pages/values/chrono.png" alt="ambition">
                 <div class="initiative">
                     <h3>ambition & agilité</h3>
                     <p>
@@ -63,7 +63,7 @@
                     </p>
                 </div>
             </li>
-            <li><img src="assets/values/stonks.png" alt="ouverture">
+            <li><img src="assets/pages/values/stonks.png" alt="ouverture">
                 <div class="initiative">
                     <h3>ouverture & diversité</h3>
                     <p>
@@ -75,7 +75,7 @@
                     </p>
                 </div>
             </li>
-            <li><img src="assets/values/balance.png" alt="éthique">
+            <li><img src="assets/pages/values/balance.png" alt="éthique">
                 <div class="initiative">
                     <h3>éthique & exigences</h3>
                     <p>Nous nous engageons à adopter un comportement éthique et conforme
